[update] set header & footer
edit application.html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,14 @@
   </head>
 
   <body>
+    <header>
+      <h1>PC builder</h1>
+    </header>
+    
     <%= yield %>
+    
+    <footer>
+      
+    </footer>
   </body>
 </html>
