--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,13 +12,18 @@
 
   <body>
     <header>
-      <h1>PC builder</h1>
+      <div class="container-fluid" style="background-color: tomato">
+        <div>
+          <h1>PC builder</h1>
+        </div>
+
+      </div>
     </header>
-    
+
     <%= yield %>
-    
+
     <footer>
-      
+
     </footer>
   </body>
 </html>
