--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,13 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-6">
+      <div>
+        <h2>パーツ</h2>
+      </div>
+    </div>
+
+    <div class="col-6">
+      <h2>合計</h2>
+    </div>
+  </div>
+</div>
